update for rename of open_issues/dbus_in_linux_kernel.mdwn to service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/systemd.mdwn
@@ -2103,7 +2103,7 @@ note the additional [[service_solahart_jakarta_selatan__082122541663/Upstart]] p
     <braunr> err
     <braunr> ArneBab: ^
 
-[[dbus_in_linux_kernel]].
+[[service_solahart_jakarta_selatan__082122541663/dbus_in_linux_kernel]].
 
     <teythoon> i've been thinking
     <teythoon> maybe the magic write stuff isn't that bad after all
