update for rename of open_issues/bash.mdwn to service_solahart_jakarta_selatan__082122541663/bash.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/bash_vs_screen_vs_sigint.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/bash_vs_screen_vs_sigint.mdwn
@@ -8,5 +8,5 @@ Sections, no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
 is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
-  * [[bash]]
+  * [[service_solahart_jakarta_selatan__082122541663/bash]]
   * [[service_solahart_jakarta_selatan__082122541663/screen]]
