update for rename of open_issues/security.mdwn to service_solahart_jakarta_selatan__082122541663/security.mdwn

--- a/security.mdwn
+++ b/security.mdwn
@@ -62,4 +62,4 @@ Offline non-overt channels are olfactory:
 
 ---
 
-[[Open Issues related to security|open_issues/security]].
+[[Open Issues related to security|service_solahart_jakarta_selatan__082122541663/security]].
