update for rename of open_issues/gnat.mdwn to service_solahart_jakarta_selatan__082122541663/gnat.mdwn

--- a/community/gsoc/project_ideas/gnat.mdwn
+++ b/community/gsoc/project_ideas/gnat.mdwn
@@ -29,5 +29,5 @@ Exercise: Fix one of the known issues of GNAT on the Hurd.
 
 ---
 
-[[Open Issue page|open_issues/gnat]].  [Entry in the GCC
+[[Open Issue page|service_solahart_jakarta_selatan__082122541663/gnat]].  [Entry in the GCC
 wiki](http://gcc.gnu.org/wiki/SummerOfCode#gnat_hurd).
