update for rename of open_issues/virtualization/fakeroot.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users.mdwn
@@ -561,7 +561,7 @@ Continued discussion about [[service_solahart_jakarta_selatan__082122541663/reso
     <braunr> hum, a wrapping _translator_ ?
     <youpi> yes, similar to remap and fakeroot
 
-[[virtualization/remap_root_translator]], [[virtualization/fakeroot]].
+[[virtualization/remap_root_translator]], [[service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot]].
 
     <braunr> ok
     <youpi> you'd tell it "for this path, please be careful for my tools"
