--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -365,7 +365,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
   * `gcc/ada`, `gcc/testsuite/ada`, `gcc/testsuite/gnat.dg`, `gnattools`,
     `libada` (not reviewed)
 
-      * [[Ada (GNAT)|GNAT]] support is work in progress.
+      * [[Ada (GNAT)|service_solahart_jakarta_selatan__082122541663/Gnat]] support is work in progress.
 
   * `gcc/go`, `gcc/testsuite/go.test`, `libgo` (not reviewed)
 
