--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -47,4 +47,4 @@ An index of things to work on w.r.t. virtualization.
 
   * [[remap_root_translator]]
 
-  * [[fakeroot]]
+  * [[service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot]]
