update for rename of open_issues/gdb_thread_ids.mdwn to service_solahart_jakarta_selatan__082122541663/gdb_thread_ids.mdwn

--- a/service_solahart_jakarta_selatan__082122541663/gdb_attach.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gdb_attach.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_gdb]]
 
 
-# [[gdb_thread_ids]]
+# [[service_solahart_jakarta_selatan__082122541663/gdb_thread_ids]]
 
 
 # IRC, freenode, #hurd, 2012-06-30
