Revert "update for rename of open_issues/glibc/debian.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/debian.mdwn"
This reverts commit 24dd5bc2167cf40a1ee962bfadc0239e26de7308.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -24,7 +24,7 @@ Here's what's to be done for maintaining glibc.
 # [[Sources|source_repositories/glibc]]
 
 
-# [[Debian Cheat Sheet|service_solahart_jakarta_selatan__082122541663/glibc/debian]]
+# [[Debian Cheat Sheet|debian]]
 
 
 # Configuration
