Revert "update for rename of open_issues/gcc/libmudflap.mdwn to service_solahart_jakarta_selatan__082122541663/gcc/libmudflap.mdwn"
This reverts commit 3c317d083f0e34df5b85da2ff15175fd058ef504.

--- a/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc.mdwn
@@ -299,7 +299,7 @@ Last reviewed up to the [[Git mirror's 3a930d3fc68785662f5f3f4af02474cb21a62056
       * Eventually: get rid of this special-casing.  [[!message-id
         "gckk1s$e0b$1@ger.gmane.org"]].
 
-  * [[`libmudflap`|service_solahart_jakarta_selatan__082122541663/gcc/libmudflap]].
+  * [[`libmudflap`|libmudflap]].
 
   * [`-fsplit-stack`](http://nickclifton.livejournal.com/6889.html)
 
