Revert "update for rename of open_issues/virtualization/remap_root_translator.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization/remap_root_translator.mdwn"
This reverts commit 5811759b2cb9ed7f45028e2af0d68b1af626715d.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -45,6 +45,6 @@ An index of things to work on w.r.t. virtualization.
 
   * [[service_solahart_jakarta_selatan__082122541663/virtualization/Networking]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/virtualization/remap_root_translator]]
+  * [[remap_root_translator]]
 
   * [[service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot]]
