Revert "update for rename of open_issues/pfinet_timers.mdwn to service_solahart_jakarta_selatan__082122541663/pfinet_timers.mdwn"
This reverts commit f50ef7d964d53ffdc878b0bae7eabe471d89aa74.

--- a/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/libpthread.mdwn
@@ -1727,7 +1727,7 @@ Same issue as [[service_solahart_jakarta_selatan__082122541663/term_blocking]] p
 
     <youpi> it seems fakeroot has become slow as hell
 
-[[service_solahart_jakarta_selatan__082122541663/pfinet_timers]].
+[[pfinet_timers]].
 
     <braunr> fakeroot is the main source of dead name notifications
     <braunr> well, a very heavy one
