Revert "update for rename of open_issues/gdb_thread_ids.mdwn to service_solahart_jakarta_selatan__082122541663/gdb_thread_ids.mdwn"
This reverts commit 7a93b06600ce24b10c956e8144fd311bda792e3f.

--- a/service_solahart_jakarta_selatan__082122541663/thread_numbering_of_ps_and_gdb.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/thread_numbering_of_ps_and_gdb.mdwn
@@ -18,4 +18,4 @@ meaning, for example a port number.
 [[!tag open_issue_hurd open_issue_gdb]]
 
 
-Also see [[service_solahart_jakarta_selatan__082122541663/Gdb_thread_ids]].
+Also see [[GDB thread IDs]].
