Revert "update for rename of open_issues/virtualization/fakeroot.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot.mdwn"
This reverts commit 48a7ee7f7f3f72f83c3cb4d2fe2d99d58ad956a4.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -47,4 +47,4 @@ An index of things to work on w.r.t. virtualization.
 
   * [[remap_root_translator]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/virtualization/fakeroot]]
+  * [[fakeroot]]
