--- a/community/gsoc/project_ideas/libdiskfs_locking.mdwn
+++ b/community/gsoc/project_ideas/libdiskfs_locking.mdwn
@@ -26,7 +26,7 @@ runtime. Or implementing a [[service_solahart_jakarta_selatan__082122541663/unit
 locking in various code paths. (The latter could serve as a template for
 implementing unit tests in other parts of the Hurd codebase...)
 
-(A [[systematic code review|service_solahart_jakarta_selatan__082122541663/security]] would probably suffice to find the
+(A [[systematic code review|open_issues/security]] would probably suffice to find the
 existing locking
 issues; but it wouldn't document the work in terms of actual code produced, and
 thus it's not suitable for a GSoC project...)
