Revert "update for rename of open_issues/glibc/mremap.mdwn to service_solahart_jakarta_selatan__082122541663/glibc/mremap.mdwn"
This reverts commit 2f506234fd55c047bc6c60c1e3be739abdf2377c.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -235,7 +235,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
     `clock_adjtime`, `fallocate`, `fallocate64`, `name_to_handle_at`,
     `open_by_handle_at`,
     `posix_openpt`, `process_vm_readv`, `process_vm_writev`,
-    `setns`, `sync_file_range`, [[`mremap`|service_solahart_jakarta_selatan__082122541663/glibc/mremap]] and [[several
+    `setns`, `sync_file_range`, [[`mremap`|mremap]] and [[several
     `MAP_*`|glibc/mmap]]
 
     Check also the content of `gnu/stubs.h`, which lists all the functions
