Revert "update for rename of open_issues/gdb.mdwn to service_solahart_jakarta_selatan__082122541663/gdb.mdwn"
This reverts commit 172e74f162f3e11c5a07b8d3704ed57a283cf3da.

--- a/service_solahart_jakarta_selatan__082122541663/duplicate_inclusion_guards.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/duplicate_inclusion_guards.mdwn
@@ -13,4 +13,4 @@ is included in the section entitled
 E.g., both `/usr/include/hurd/process.h` and
 `/usr/include/hurd/process_request.h` use `_process_user_` as an inclusion
 guard.  This leads to problems when both are needed, as is the case in
-[[service_solahart_jakarta_selatan__082122541663/Gdb]]'s `gdb/gnu-nat.c`.
+[[GDB]]'s `gdb/gnu-nat.c`.
