--- a/service_solahart_jakarta_selatan__082122541663/whole_system_debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/whole_system_debugging.mdwn
@@ -11,9 +11,9 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_gdb open_issue_gnumach]]
 
 Given our distributed system structure, it'd be immensely useful then when a
-[[RPC]] to another entitiy is made, [[service_solahart_jakarta_selatan__082122541663/Gdb]] followed suit.
+[[RPC]] to another entitiy is made, [[GDB]] followed suit.
 
-[[service_solahart_jakarta_selatan__082122541663/Gdb]] does have some *multi-process* debugging infrastructure which should
+[[GDB]] does have some *multi-process* debugging infrastructure which should
 basically be usable for this.
 
 [[`mach_msg`|microkernel/mach/message]] is the *great barrier*, of course.
