Revert "update for rename of open_issues/gdb.mdwn to service_solahart_jakarta_selatan__082122541663/gdb.mdwn"
This reverts commit 1b882f8531db22db7311fe777be3bf96d223b7b0.

--- a/service_solahart_jakarta_selatan__082122541663/crash_server.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/crash_server.mdwn
@@ -107,7 +107,7 @@ one...
             #0  0x00000000 in ?? ()
             Cannot access memory at address 0x17
 
-        [[!tag open_issue_gdb]] Probably [[service_solahart_jakarta_selatan__082122541663/Gdb]] doesn't manage to dig in the stack properly.
+        [[!tag open_issue_gdb]] Probably [[GDB]] doesn't manage to dig in the stack properly.
 
   * ... against `crash-suspend` will...
 
