Revert "update for rename of open_issues/gdb.mdwn to service_solahart_jakarta_selatan__082122541663/gdb.mdwn"
This reverts commit b8a24d626439484aec308d1b0a75bed3e84d46ee.

--- a/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/debugging.mdwn
@@ -14,7 +14,7 @@ License|/fdl]]."]]"""]]
 
 We have debugging infrastructure.  For example:
 
-  * [[service_solahart_jakarta_selatan__082122541663/Gdb]]
+  * [[GDB]]
 
   * [[GNU Mach debugging|microkernel/mach/gnumach/debugging]]
 
