Revert "update for rename of open_issues/file_locking.mdwn to service_solahart_jakarta_selatan__082122541663/file_locking.mdwn"
This reverts commit eef12a5f7e34fbad3f4b2b01b864369c0b646d8c.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -1853,7 +1853,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
             <braunr> teythoon: i think it should be in glibc
             <braunr> maybe in mach/
 
-      * [[POSIX file record locking|service_solahart_jakarta_selatan__082122541663/file_locking]]
+      * [[POSIX file record locking|file_locking]]
 
       * <a name="execve_relative_paths">`execve` with relative paths</a>
 
