Revert "update for rename of open_issues/select.mdwn to service_solahart_jakarta_selatan__082122541663/select.mdwn"
This reverts commit f5def78ad7f20d47333423a7a2023b9c42f3fc30.

--- a/service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/alarm_setitimer.mdwn
@@ -83,7 +83,7 @@ This issue was recently fixed (around January 2013).
 
 ## IRC, freenode, #hurd, 2013-01-04
 
-See also [[service_solahart_jakarta_selatan__082122541663/select]].
+See also [[select]].
 
     <youpi> bummer, we have broken ghc completely with the latest glibc patches
     <pinotree> youpi: what do you mean?
