Revert "update for rename of open_issues/sendmsg_scm_creds.mdwn to service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds.mdwn"
This reverts commit 7a4d9fa9ae452ed7e94a447f678997df0f88d488.

--- a/service_solahart_jakarta_selatan__082122541663/pflocal_reauth.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/pflocal_reauth.mdwn
@@ -39,4 +39,4 @@ IRC, freenode, #hurd, 2011-04-02
 ---
 
 See also [[service_solahart_jakarta_selatan__082122541663/pflocal_socket_credentials_for_local_sockets]] and
-[[service_solahart_jakarta_selatan__082122541663/sendmsg_scm_creds]].
+[[sendmsg_scm_creds]].
