Revert "update for rename of open_issues/code_analysis.mdwn to service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn"
This reverts commit 2864140335a48fcbde17b5f810839406120e459e.

--- a/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/term_blocking.mdwn
@@ -334,6 +334,6 @@ This issue may be a simple programming error, or it may be more complicated.
 
 Methods of [[service_solahart_jakarta_selatan__082122541663/formal_verification]] should be applied to confirm that there is
 no error in `/hurd/term`'s logic itself.  There are tools for formal
-verification/[[service_solahart_jakarta_selatan__082122541663/code_analysis]] that can likely help here.
+verification/[[code_analysis]] that can likely help here.
 
 There is a [[!FF_project 277]][[!tag bounty]] on this task.
