Revert "update for rename of open_issues/code_analysis.mdwn to service_solahart_jakarta_selatan__082122541663/code_analysis.mdwn"
This reverts commit c93ee264bce402c0ddf46a09de5e05384fce3af7.

--- a/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn
@@ -30,7 +30,7 @@ There are locking issues in the Hurd's libraries.
 
 Methods of [[service_solahart_jakarta_selatan__082122541663/formal_verification]] should be applied to get an understanding of
 the behavior of the locking logic.  There are tools for formal
-verification/[[service_solahart_jakarta_selatan__082122541663/code_analysis]] that can likely help here.
+verification/[[code_analysis]] that can likely help here.
 
 There is a [[!FF_project 278]][[!tag bounty]] on this task.
 
