Revert "update for rename of open_issues/resource_management_problems/pagers.mdwn to service_solahart_jakarta_selatan__082122541663/resource_management_problems/pagers.mdwn"
This reverts commit 274033158e0fcc1337c6ee53f8b589af852469c1.

--- a/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/resource_management_problems.mdwn
@@ -96,7 +96,7 @@ In context of <https://teythoon.cryptobitch.de/posts/my-worst-week-yet/>.
 
   * [[service_solahart_jakarta_selatan__082122541663/resource_management_problems/Io_accounting]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users]], and [[service_solahart_jakarta_selatan__082122541663/resource_management_problems/pagers]]
+  * [[service_solahart_jakarta_selatan__082122541663/translators_set_up_by_untrusted_users]], and [[pagers]]
 
   * [[service_solahart_jakarta_selatan__082122541663/resource_management_problems/configure_max_command_line_length]]
 
