Revert "update for rename of open_issues/locking_issues.mdwn to service_solahart_jakarta_selatan__082122541663/locking_issues.mdwn"
This reverts commit c06abccb6d4d61521027c1d25e11a8ed2bba6542.

--- a/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/formal_verification.mdwn
@@ -23,7 +23,7 @@ See also [[code_analysis]].
 
 # Issues
 
-  * [[service_solahart_jakarta_selatan__082122541663/locking_issues]]
+  * [[locking_issues]]
 
   * [[service_solahart_jakarta_selatan__082122541663/term_blocking]]
 
