Revert "update for rename of open_issues/boehm_gc.mdwn to service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn"
This reverts commit a69fc17868a3e4185abb56851f49eb19715ab713.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -860,7 +860,7 @@ like `gdb/testsuite/boards/cc-with-tweaks.exp` would help, or setting
     9939e1314f970c6ba568956148a518ac710a280a..c2853f3d99797a321c37948297441ca6021f719a
     on kepler.SCHWINGE, too.  TODO.
 
-  * [[libgc|service_solahart_jakarta_selatan__082122541663/boehm_gc]] `GC_find_limit_with_bound` SIGSEGVs
+  * [[libgc|boehm_gc]] `GC_find_limit_with_bound` SIGSEGVs
 
     On coulomb.SCHWINGE, in
     9939e1314f970c6ba568956148a518ac710a280a..c2853f3d99797a321c37948297441ca6021f719a
@@ -902,7 +902,7 @@ like `gdb/testsuite/boards/cc-with-tweaks.exp` would help, or setting
     (new dependency due to new Guile scripting support; all Guile scripting
     tests PASS).  So, probably some bad interaction between GDB and a debuggee
     that is using libgc; maybe libgc is using SIGSEGV for internal signalling
-    purposes; see the `HEURISTIC2` discussion on [[service_solahart_jakarta_selatan__082122541663/boehm_gc]].
+    purposes; see the `HEURISTIC2` discussion on [[boehm_gc]].
 
         #0  0x0126b961 in GC_find_limit_with_bound () from /usr/lib/i386-gnu/libgc.so.1
         #1  0x0126ba2e in GC_find_limit () from /usr/lib/i386-gnu/libgc.so.1
