Revert "update for rename of open_issues/ifunc.mdwn to service_solahart_jakarta_selatan__082122541663/ifunc.mdwn"
This reverts commit 192d6986b8b71a2b65ebc56aecc321f6ea1edf73.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -341,7 +341,7 @@ like `gdb/testsuite/boards/cc-with-tweaks.exp` would help, or setting
 
   * ld IFUNC execution tests
 
-    Missing [[service_solahart_jakarta_selatan__082122541663/Ifunc]] support on GNU/Hurd.
+    Missing [[IFUNC]] support on GNU/Hurd.
 
     Added in commit 82c5587db078581cfe94a4385ed99de1d1fa6657 (2012-09-19):
 
