Revert "update for rename of open_issues/boehm_gc.mdwn to service_solahart_jakarta_selatan__082122541663/boehm_gc.mdwn"
This reverts commit d6fb30a0325a2024a87fdb6d5f4cfc46759c0206.

--- a/service_solahart_jakarta_selatan__082122541663/code_analysis/discussion.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/code_analysis/discussion.mdwn
@@ -242,4 +242,4 @@ License|/fdl]]."]]"""]]
 
 # Leak Detection
 
-See *Leak Detection* on [[service_solahart_jakarta_selatan__082122541663/boehm_gc]].
+See *Leak Detection* on [[boehm_gc]].
