Revert "update for rename of open_issues/mmap_write-only.mdwn to service_solahart_jakarta_selatan__082122541663/mmap_write-only.mdwn"
This reverts commit 9f3b8ac65d495c58ec63b859d6272e8c73a1a570.

--- a/service_solahart_jakarta_selatan__082122541663/llvm.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/llvm.mdwn
@@ -187,7 +187,7 @@ probably because of too-big files when linking.  Configuring with
          checking if /dev/zero is needed for mmap... no
         +configure: WARNING: mmap() of files required but not found
 
-   Due to [[service_solahart_jakarta_selatan__082122541663/mmap_write-only]].
+   Due to [[mmap_write-only]].
 
         +In file included from [...]/lib/Support/Process.cpp:85:0:
         +[...]/lib/Support/Unix/Process.inc: In function 'unsigned int getColumns(int)':
