Revert "update for rename of open_issues/libpager_deadlock.mdwn to service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn"
This reverts commit c3b7909587df0a40f0424bcb881182a697b72438.

--- a/service_solahart_jakarta_selatan__082122541663/synchronous_ipc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/synchronous_ipc.mdwn
@@ -53,7 +53,7 @@ From [[Genode RPC|microkernel/genode/rpc]].
     <braunr> blocking :/
     <braunr> i bet the libpager deadlock is due to that
 
-[[service_solahart_jakarta_selatan__082122541663/libpager_deadlock]].
+[[libpager_deadlock]].
 
     <braunr> it simply means async ipc doesn't prevent at all from deadlocks
     <antrik> the sender can set a timeout. blocking only happens when setting
