Revert "update for rename of open_issues/user-space_device_drivers.mdwn to service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn"
This reverts commit 3665280422be8039bcc5e485a52339514f0df6a9.

--- a/community/gsoc/project_ideas/driver_glue_code.mdwn
+++ b/community/gsoc/project_ideas/driver_glue_code.mdwn
@@ -23,7 +23,7 @@ so we can use drivers from current Linux versions instead,
 or perhaps from one of the free BSD variants.
 
 This is [[!GNU_Savannah_task 5488]].
-[[service_solahart_jakarta_selatan__082122541663/user-space_device_drivers]].
+[[open issues/user-space device drivers]].
 [[service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems]].
 
 The most promising approach for getting newer drivers seems to be [[DDE]]:
