Revert "update for rename of open_issues/libpager_deadlock.mdwn to service_solahart_jakarta_selatan__082122541663/libpager_deadlock.mdwn"
This reverts commit df5db95284b7ebb05a796fd2c2b766c15e8904ca.

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_page_cache_policy.mdwn
@@ -109,7 +109,7 @@ License|/fdl]]."]]"""]]
     <braunr> i'll try with other values
     <braunr> i get crashes, deadlocks, livelocks, and it's not pretty :)
 
-[[service_solahart_jakarta_selatan__082122541663/libpager_deadlock]].
+[[libpager_deadlock]].
 
     <braunr> and always in ext2, mach doesn't seem affected by the issue, other
       than the obvious
@@ -657,7 +657,7 @@ License|/fdl]]."]]"""]]
     <braunr> but i think my patch can't make it into the git repo until the
       swap deadlock is solved (or at least very infrequent ..)
 
-[[service_solahart_jakarta_selatan__082122541663/libpager_deadlock]].
+[[libpager_deadlock]].
 
     <braunr> well, the page cache accounting tells me something is wrong there
       too lol
