Revert "update for rename of open_issues/user-space_device_drivers.mdwn to service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn"
This reverts commit edbc68ab0d52ba9204628c2f1cacdaefbe20f83a.

--- a/service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 This is a collection of resources concerning *device drivers* and *I/O systems*
 in general.
 
-Also see [[service_solahart_jakarta_selatan__082122541663/user-space_device_drivers]].
+Also see [[user-space device drivers]].
 [[community/gsoc/project ideas/driver glue code]].
 
 [[!toc levels=2]]
