Revert "update for rename of open_issues/user-space_device_drivers.mdwn to service_solahart_jakarta_selatan__082122541663/user-space_device_drivers.mdwn"
This reverts commit e53b5edbb351a7a8d853dcb55e7895d60d8de5aa.

--- a/hurd/dde.mdwn
+++ b/hurd/dde.mdwn
@@ -13,7 +13,7 @@ License|/fdl]]."]]"""]]
 
   * [[community/gsoc/project ideas/driver glue code]]
 
-  * [[service_solahart_jakarta_selatan__082122541663/user-space_device_drivers]]
+  * [[open issues/user-space device drivers]]
 
   * [[service_solahart_jakarta_selatan__082122541663/device_drivers_and_io_systems]]
 
