Revert "update for rename of open_issues/blkrrpart_ioctl.mdwn to service_solahart_jakarta_selatan__082122541663/blkrrpart_ioctl.mdwn"
This reverts commit 64801bca7fa265812507ca20bea2789349bebb12.

--- a/service_solahart_jakarta_selatan__082122541663/fdisk.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/fdisk.mdwn
@@ -16,4 +16,4 @@ License|/fdl]]."]]"""]]
     
 Changes have been saved, though.
 
-Perhaps realted to the [[service_solahart_jakarta_selatan__082122541663/Blkrrpart_ioctl]]?
+Perhaps realted to the [[BLKRRPART_IOCTL]]?
