--- a/llvm.mdwn
+++ b/llvm.mdwn
@@ -14,7 +14,7 @@ is included in the section entitled
 # <http://www.llvm.org/>
 
 
-# [[Maintenance|service_solahart_jakarta_selatan__082122541663/llvm]]
+# [[Maintenance|open_issues/llvm]]
 
 
 # Open Issues
