--- a/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/clock_gettime.mdwn
@@ -211,7 +211,7 @@ In context of [[select]].
     <braunr> i think librt is decent
 
 
-# Candidate for [[service_solahart_jakarta_selatan__082122541663/Vdso]] code?
+# Candidate for [[vDSO]] code?
 
 
 # IRC, freenode, #hurd, 2014-02-23
