Revert "update for rename of open_issues/vdso.mdwn to service_solahart_jakarta_selatan__082122541663/vdso.mdwn"
This reverts commit e8b13593e3aece8a800f84509a8768cc7babe7cc.

--- a/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/binutils.mdwn
@@ -209,7 +209,7 @@ formats, and more emulation vectors.
 
   * For GDB, why do we specify `-D_GNU_SOURCE`, and GNU/Linux doesn't?
 
-  * GNU/Linux: `gdb/symfile-mem.c` for [[service_solahart_jakarta_selatan__082122541663/Vdso]].
+  * GNU/Linux: `gdb/symfile-mem.c` for [[vDSO]].
 
   * GNU/Linux: `gdb/i386-nat.c` for hardware breakpoints, etc. -- we should
     probably use that, too.  Related to Samuel's Hurd GDB patch?
