Revert "update for rename of open_issues/vdso.mdwn to service_solahart_jakarta_selatan__082122541663/vdso.mdwn"
This reverts commit 0c9b6025fc3e2966b499b562acb945709a1c02d1.

--- a/microkernel/mach/gnumach/interface/device/time.mdwn
+++ b/microkernel/mach/gnumach/interface/device/time.mdwn
@@ -15,7 +15,7 @@ Typically available as `/dev/time`, [[hurd/translator/storeio]].
 
 Using that, [[hurd/libshouldbeinlibc]]'s `<maptime.h>` provides `maptime_map`
 and `maptime_read`, see the [[hurd/reference_manual]].  Candidate for
-replacement with [[service_solahart_jakarta_selatan__082122541663/Vdso]] code?
+replacement with [[open_issues/vDSO]] code?
 
 
 # IRC, freenode, #hurd, 2013-11-20
