Revert "update for rename of open_issues/virtualization/capsicum.mdwn to service_solahart_jakarta_selatan__082122541663/virtualization/capsicum.mdwn"
This reverts commit 3ab75ad1b1af5348c1cedea6a058cc091e2c11f7.

--- a/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/virtualization.mdwn
@@ -31,7 +31,7 @@ An index of things to work on w.r.t. virtualization.
 
   * Unix / Linux 
 
-      * [[service_solahart_jakarta_selatan__082122541663/virtualization/Capsicum]]
+      * [[Capsicum]]
 
       * [[service_solahart_jakarta_selatan__082122541663/Virtual_square_view-os]]
 
