Revert "update for rename of open_issues/performance/degradation.mdwn to service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn"
This reverts commit e99e81630378edbe8d8d956b2dbc3f3bc1f5c901.

--- a/service_solahart_jakarta_selatan__082122541663/performance.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/performance.mdwn
@@ -30,7 +30,7 @@ call|/glibc/fork]]'s case.
 
 ---
 
-  * [[service_solahart_jakarta_selatan__082122541663/performance/Degradation]]
+  * [[Degradation]]
 
   * [[service_solahart_jakarta_selatan__082122541663/performance/fork]]
 
