--- a/service_solahart_jakarta_selatan__082122541663/default_pager.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/default_pager.mdwn
@@ -23,7 +23,7 @@ License|/fdl]]."]]"""]]
     <antrik> (and also I/O performance steadily dropping before that point is
       reached?)
 
-[[service_solahart_jakarta_selatan__082122541663/performance/degradation]], [[service_solahart_jakarta_selatan__082122541663/ext2fs_page_cache_swapping_leak]].
+[[performance/degradation]], [[service_solahart_jakarta_selatan__082122541663/ext2fs_page_cache_swapping_leak]].
 
     <antrik> hm
     <braunr> there could too many things
