Revert "update for rename of open_issues/performance/degradation.mdwn to service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn"
This reverts commit 7a6fa906e80e1263299420cd21ca3cf80c1c164b.

--- a/service_solahart_jakarta_selatan__082122541663/ext2fs_page_cache_swapping_leak.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ext2fs_page_cache_swapping_leak.mdwn
@@ -301,7 +301,7 @@ There is a [[!FF_project 272]][[!tag bounty]] on this task.
       getting slower on further runs, and my followups... I *suspect* it's the
       same issue
 
-[[service_solahart_jakarta_selatan__082122541663/performance/degradation]].
+[[performance/degradation]].
 
     <slpz> antrik: I'm thinking about establishing a repository for these
       experimental versions, so they don't get lost with the time
