Revert "update for rename of open_issues/performance/degradation.mdwn to service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn"
This reverts commit 0f08065ecd4a4cfddc0ca4418f9869b4dedbf87c.

--- a/service_solahart_jakarta_selatan__082122541663/gnumach_vm_map_red-black_trees.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gnumach_vm_map_red-black_trees.mdwn
@@ -93,7 +93,7 @@ License|/fdl]]."]]"""]]
     <antrik> the major benefit AIUI is rather that the slowdown happening over
       time will be less noticable
 
-[[service_solahart_jakarta_selatan__082122541663/performance/degradation]].
+[[performance/degradation]].
 
     <youpi> "over time" is actually quite fast
     <youpi> ext2 fills up very quickly when you build a package
