Revert "update for rename of open_issues/performance/degradation.mdwn to service_solahart_jakarta_selatan__082122541663/performance/degradation.mdwn"
This reverts commit e9f65470bf28cefc60ba400454a2bff586b56a0a.

--- a/service_solahart_jakarta_selatan__082122541663/resource_management_problems/pagers.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/resource_management_problems/pagers.mdwn
@@ -109,7 +109,7 @@ See also: [[service_solahart_jakarta_selatan__082122541663/translators_set_up_by
       ultimate crash) I described recently...
 
 [[/service_solahart_jakarta_selatan__082122541663/default_pager]], [[system performance degradation
-(?)|service_solahart_jakarta_selatan__082122541663/performance/degradation]].
+(?)|performance/degradation]].
 
     <antrik> care to explain them to a noob like me?
     <slpz> probably not. During my tests, I've noticed that, at some points,
