Revert "update for rename of open_issues/debugging.mdwn to service_solahart_jakarta_selatan__082122541663/debugging.mdwn"
This reverts commit 0f31481900ef4fa6591f9a9b85e896c5974dec78.

--- a/service_solahart_jakarta_selatan__082122541663/ltrace.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/ltrace.mdwn
@@ -24,4 +24,4 @@ License|/fdl]]."]]"""]]
 
 # See Also
 
-  * [[service_solahart_jakarta_selatan__082122541663/debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
+  * [[debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
