Revert "update for rename of open_issues/debugging.mdwn to service_solahart_jakarta_selatan__082122541663/debugging.mdwn"
This reverts commit d0d6e7fc10e7efbdd1422f6efc9451ed4b7a84ea.

--- a/service_solahart_jakarta_selatan__082122541663/latrace.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/latrace.mdwn
@@ -13,4 +13,4 @@ Check whether <http://people.redhat.com/jolsa/latrace/> works.
 
 # See Also
 
-  * [[service_solahart_jakarta_selatan__082122541663/debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
+  * [[debugging]], [[service_solahart_jakarta_selatan__082122541663/profiling]]
