Revert "update for rename of open_issues/gccgo.mdwn to service_solahart_jakarta_selatan__082122541663/gccgo.mdwn"
This reverts commit 7a4669a9475e1ae11776c94a232f3c0e95ee7aa3.

--- a/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/glibc.mdwn
@@ -846,7 +846,7 @@ Last reviewed up to the [[Git mirror's 64a17f1adde4715bb6607f64decd73b2df9e6852
         naturally aligned.  The idea is still to [[get rid of Hurd threadvars
         and replace them with TLS|service_solahart_jakarta_selatan__082122541663/glibc/t/tls-threadvar]].
 
-        Aside from [[service_solahart_jakarta_selatan__082122541663/gccgo]], the following packages might make use of these
+        Aside from [[gccgo]], the following packages might make use of these
         functions, searching on <http://codesearch.debian.net/> for
         `\b(get|set|make|swap)context\s*\(` on 2013-05-18: boost1.49,
         chromium-browser, gtk-vnc, guile-1.8, iceape, icedove, iceweasel,
