Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 7a0b408f065fa4807b5dac068ae47d766a27f347.

--- a/hurd/debugging/glibc.mdwn
+++ b/hurd/debugging/glibc.mdwn
@@ -31,7 +31,7 @@ newly created libraries and loader actually work: they'll be used to run the
 Unless cross-compiling, the next thing you'll probably want to do
 is running the test suite, or parts of it.
 
-There is a list of [[known failures|service_solahart_jakarta_selatan__082122541663/glibc]].
+There is a list of [[known failures|open_issues/glibc]].
 
 ---
 
