Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 3e372a0f270466c7fb5c452911e4c26e9dbed569.

--- a/glibc.mdwn
+++ b/glibc.mdwn
@@ -41,7 +41,7 @@ This is different to the Linux port, where most simple POSIX interfaces are in
 fact simply forwarded to/implemented as [[system_call]]s.
 
 
-## [[Maintenance|service_solahart_jakarta_selatan__082122541663/glibc]]
+## [[Maintenance|open_issues/glibc]]
 
 
 # Implementation Details
