Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 298fd083a67e2633bf393ba09ca5efba57a95672.

--- a/service_solahart_jakarta_selatan__082122541663/versioning.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/versioning.mdwn
@@ -67,7 +67,7 @@ In context of [[service_solahart_jakarta_selatan__082122541663/packaging_libpthr
       new RPCs, though we'd probably have to break backwards-compatibility in
       the exec server IIRC...
 
-[[service_solahart_jakarta_selatan__082122541663/glibc#execve_relative_paths]].
+[[glibc#execve_relative_paths]].
 
 
 ### `time_t` -- Unix Epoch vs. 2038
