Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 91cd8862ad29ea8e7187443ba4de8e190e0b64ab.

--- a/community/gsoc/project_ideas/testsuites.mdwn
+++ b/community/gsoc/project_ideas/testsuites.mdwn
@@ -19,7 +19,7 @@ Missing Interfaces in glibc for GNU Hurd"]]
 
 
 A number of software packages come with extensive testsuites.
-Some notable ones are [[service_solahart_jakarta_selatan__082122541663/glibc]], gnulib, Perl,
+Some notable ones are [[open_issues/glibc]], gnulib, Perl,
 Python, GNU Coreutils, and glib.
 While these testsuites were written mostly to track regressions in the respective packages,
 some of the tests fail on the Hurd in general.
@@ -58,7 +58,7 @@ A related project is to [implement missing interfaces for GNU
 Hurd](http://www.gnu.org/software/soc-projects/ideas-2014.html#glibc_hurd_missing_interfaces)
 ([glibc
 wiki](https://sourceware.org/glibc/wiki/GSoC#Implement_Missing_Interfaces_for_GNU_Hurd)),
-primatily in [[service_solahart_jakarta_selatan__082122541663/glibc#missing]].
+primatily in [[open_issues/glibc#missing]].
 
 In glibc's Linux kernel port, most simple POSIX interfaces are in fact just
 forwarded to (implemented by) Linux kernel system calls. In contrast, in the
@@ -79,7 +79,7 @@ added, which are then used as long as there is no real implementation, and
 often these real implementations are only done for the Linux kernel port, but
 not GNU Hurd. (This is because most of the contributors are primarily
 interested in using glibc on Linux-based systems.)  Also, there is quite a
-backlog of [[missing implementations|service_solahart_jakarta_selatan__082122541663/glibc#missing]] for GNU Hurd.
+backlog of [[missing implementations|open_issues/glibc#missing]] for GNU Hurd.
 
 In coordination with the [[GNU Hurd developers|mailing_lists/bug-hurd]], you'd
 work on implementing such missing interfaces.
