Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 66b91df38417f96a69a7ba9c6354f930a795fe32.

--- a/service_solahart_jakarta_selatan__082122541663/gcc/pie.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/gcc/pie.mdwn
@@ -48,4 +48,4 @@ License|/fdl]]."]]"""]]
 
 ## [[!message-id "20130211040854.GN5926@type.youpi.perso.aquilenet.fr"]]
 
-[[service_solahart_jakarta_selatan__082122541663/glibc]] `t/pie-sbrk` branch.
+[[glibc]] `t/pie-sbrk` branch.
