Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 70f8b8dd943b4754551294c53f59a3faca87c1c1.

--- a/service_solahart_jakarta_selatan__082122541663/fork_deadlock.mdwn
+++ b/service_solahart_jakarta_selatan__082122541663/fork_deadlock.mdwn
@@ -10,7 +10,7 @@ License|/fdl]]."]]"""]]
 
 [[!tag open_issue_glibc]]
 
-This started appearing when Jérémie's [[service_solahart_jakarta_selatan__082122541663/glibc]] signal patches were integrated:
+This started appearing when Jérémie's [[glibc]] signal patches were integrated:
 very sporadically, but still now and then, `fork` will hang, as follows, and
 typically in `/bin/sh`.
 
