--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -99,7 +99,7 @@ part:1:file:/home/samy/tmp/foo`). This would be libnetfs-based.
 * Port valgrind. There is a whole
 [[GSoC proposal|community/gsoc/project_ideas/valgrind]] about this, but the
 basic port could be small.
-* Move the [[mount/umount|service_solahart_jakarta_selatan__082122541663/glibc#mount]] logic from
+* Move the [[mount/umount|open_issues/glibc#mount]] logic from
 `utils/{,u}mount.c` into [[glibc]].
 * Fix [[`/proc/self`|hurd/translator/procfs/jkoenig/discussion#self]].
 Look at `[glibc]/hurd/lookup-retry.c` for how [[`FS_RETRY_MAGICAL`
