--- a/community/gsoc/project_ideas/testing_framework/discussion.mdwn
+++ b/community/gsoc/project_ideas/testing_framework/discussion.mdwn
@@ -53,7 +53,7 @@ freenode, #hurd channel, 2011-03-05:
 
     <antrik> AFAIK libc has very few failing tests
 
-[[service_solahart_jakarta_selatan__082122541663/glibc]].
+[[open_issues/glibc]].
 
     <youpi> err, like twenty?
     <youpi> € grep -v '^#' expected-results-i486-gnu-libc | wc -l
