Revert "update for rename of open_issues/glibc.mdwn to service_solahart_jakarta_selatan__082122541663/glibc.mdwn"
This reverts commit 9dbd5bae308305480519f318bd04caac67bf4b2f.

--- a/glibc/process.mdwn
+++ b/glibc/process.mdwn
@@ -29,7 +29,7 @@ Lives on the stack after arguments and environment.
 The `phdr` and `phdrsz` members are only used in
 `sysdeps/mach/hurd/dl-sysdep.c`:`_dl_sysdep_start` (for `[SHARED]`) and
 `sysdeps/mach/hurd/i386/init-first.c`:`init1` (for `[!SHARED]`).  See comments
-in [[service_solahart_jakarta_selatan__082122541663/glibc]] for commit 288f7d79fe2dcc8e62c539f57b25d7662a2cd5ff.
+in [[open_issues/glibc]] for commit 288f7d79fe2dcc8e62c539f57b25d7662a2cd5ff.
 
 
 ## `hurd/hurdstartup.c`:`_hurd_startup (void **argptr, void (*main) (intptr_t
